arm64: dts: qcom: db820c: Specify firmware for adsp
Enable adsp and specify the firmware.

Signed-off-by: Bjorn Andersson <bjorn.andersson@linaro.org>
Signed-off-by: Loic Poulain <loic.poulain@linaro.org>

--- a/arch/arm64/boot/dts/qcom/apq8096-db820c.dtsi
+++ b/arch/arm64/boot/dts/qcom/apq8096-db820c.dtsi
@@ -908,6 +908,11 @@
 	status = "okay";
 };
 
+&adsp {
+	status = "okay";
+	firmware-name = "qcom/msm8996/adsp.mdt";
+};
+
 &q6asmdai {
 	dai@0 {
 		reg = <0>;
