--- a/arch/arm64/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996.dtsi
@@ -2061,7 +2061,7 @@
 			};
 		};
 
-		adsp_pil: remoteproc@9300000 {
+		adsp: remoteproc@9300000 {
 			compatible = "qcom,msm8996-adsp-pil";
 			reg = <0x09300000 0x80000>;
 
