--- a/arch/arm64/boot/dts/qcom/apq8096-db820c.dtsi
+++ b/arch/arm64/boot/dts/qcom/apq8096-db820c.dtsi
@@ -916,17 +916,17 @@
 &q6asmdai {
 	dai@0 {
 		reg = <0>;
-		direction = <2>;
+		/*direction = <2>;*/
 	};
 
 	dai@1 {
 		reg = <1>;
-		direction = <2>;
+		/*direction = <2>;*/
 	};
 
 	dai@2 {
 		reg = <2>;
-		direction = <1>;
+		/*direction = <1>;*/
 	};
 };
 
