--- a/arch/arm64/boot/dts/qcom/apq8096-db820c.dtsi
+++ b/arch/arm64/boot/dts/qcom/apq8096-db820c.dtsi
@@ -141,6 +141,30 @@
 		startup-delay-us = <70000>;
 		enable-active-high;
 	};
+
+	camera_vdddo_1v8: fixedregulator@0 {
+		compatible = "regulator-fixed";
+		regulator-name = "camera_vdddo";
+		regulator-min-microvolt = <1800000>;
+		regulator-max-microvolt = <1800000>;
+		regulator-always-on;
+	};
+
+	camera_vdda_2v8: fixedregulator@1 {
+		compatible = "regulator-fixed";
+		regulator-name = "camera_vdda";
+		regulator-min-microvolt = <2800000>;
+		regulator-max-microvolt = <2800000>;
+		regulator-always-on;
+	};
+
+	camera_vddd_1v5: fixedregulator@2 {
+		compatible = "regulator-fixed";
+		regulator-name = "camera_vddd";
+		regulator-min-microvolt = <1500000>;
+		regulator-max-microvolt = <1500000>;
+		regulator-always-on;
+	};
 };
 
 &blsp1_i2c2 {
@@ -207,7 +231,56 @@
 };
 
 &camss {
+	status = "okay";
 	vdda-supply = <&vreg_l2a_1p25>;
+
+	ports {
+		#address-cells = <1>;
+		#size-cells = <0>;
+		port@0 {
+			reg = <0>;
+			csiphy0_ep: endpoint {
+				clock-lanes = <7>;
+				data-lanes = <0 1>;
+				remote-endpoint = <&ov5640_ep>;
+				status = "disabled";
+			};
+		};
+	};
+};
+
+&cci {
+	status = "okay";
+
+	i2c-bus@0 {
+		camera_rear@60 {
+			compatible = "ovti,ov5640";
+			reg = <0x60>;
+
+			enable-gpios = <&msmgpio 25 GPIO_ACTIVE_HIGH>;
+			reset-gpios = <&msmgpio 26 GPIO_ACTIVE_HIGH>;
+			pinctrl-names = "default";
+			pinctrl-0 = <&camera_rear_default>;
+
+			clocks = <&mmcc CAMSS_MCLK0_CLK>;
+			clock-names = "xclk";
+			clock-frequency = <24000000>;
+
+			vdddo-supply = <&camera_vdddo_1v8>;
+			vdda-supply = <&camera_vdda_2v8>;
+			vddd-supply = <&camera_vddd_1v5>;
+
+			status = "disabled";
+
+			port {
+				ov5640_ep: endpoint {
+					clock-lanes = <1>;
+					data-lanes = <0>;
+					remote-endpoint = <&csiphy0_ep>;
+				};
+			};
+		};
+	};
 };
 
 &hdmi {
